--- a/webapp/src/components/TopNavHeader/index.less
+++ b/webapp/src/components/TopNavHeader/index.less
@@ -16,7 +16,7 @@
     }
   }
   &.light {
-    background-color: #fff;
+    background-color: #204262;
   }
   .main {
     display: flex;
@@ -61,7 +61,7 @@
 
 .light {
   h1 {
-    color: #002140;
+    color: #ffffff;
   }
 }
 
@@ -69,4 +69,5 @@
   height: @layout-header-height;
   line-height: @layout-header-height;
   border: none;
+  background-color: #204262;
 }
