--- a/webapp/src/pages/document.ejs
+++ b/webapp/src/pages/document.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>深证通 BOSS</title>
+    <title>文件传输</title>
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
   </head>
   <body>
