--- a/webapp/src/components/GlobalHeader/index.less
+++ b/webapp/src/components/GlobalHeader/index.less
@@ -48,6 +48,8 @@
   float: right;
   height: 100%;
   overflow: hidden;
+  position: relative;
+  top: -7px;
   .action {
     display: inline-block;
     height: 100%;
