--- a/webapp/src/components/SiderMenu/index.less
+++ b/webapp/src/components/SiderMenu/index.less
@@ -72,8 +72,8 @@
 
 :global {
   .top-nav-menu li.ant-menu-item {
-    height: @nav-header-height;
-    line-height: @nav-header-height;
+    height: 49px;
+    line-height: 45px;
   }
   .drawer .drawer-content {
     background: #001529;
