--- a/webapp/src/components/TopNavHeader/index.less
+++ b/webapp/src/components/TopNavHeader/index.less
@@ -3,7 +3,7 @@
 .head {
   position: relative;
   width: 100%;
-  height: @layout-header-height;
+  height: 47px;  //@layout-header-height
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   transition: background 0.3s, width 0.2s;
   :global {
@@ -20,7 +20,7 @@
   }
   .main {
     display: flex;
-    height: @layout-header-height;
+    height: 47px;
     padding-left: 24px;
     &.wide {
       max-width: 1200px;
@@ -40,9 +40,9 @@
 .logo {
   position: relative;
   width: 175px;
-  height: @layout-header-height;
+  height: 47px;
   overflow: hidden;
-  line-height: @layout-header-height;
+  line-height: 45px;
   transition: all 0.3s;
   img {
     display: inline-block;
@@ -66,8 +66,8 @@
 }
 
 .menu {
-  height: @layout-header-height;
-  line-height: @layout-header-height;
+  height: 47px;
+  line-height: 45px;
   border: none;
   background-color: #204262;
 }
