--- a/webapp/src/components/TopNavHeader/index.less
+++ b/webapp/src/components/TopNavHeader/index.less
@@ -3,24 +3,25 @@
 .head {
   position: relative;
   width: 100%;
-  height: 47px;  //@layout-header-height
+  height: 56px;  //@layout-header-height
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+  border-bottom: 1px solid #007bff;
   transition: background 0.3s, width 0.2s;
   :global {
     .ant-menu-submenu.ant-menu-submenu-horizontal {
       height: 100%;
-      line-height: @layout-header-height;
+      line-height: 56px;
       .ant-menu-submenu-title {
         height: 100%;
       }
     }
   }
   &.light {
-    background-color: #204262;
+    background-color: #ffffff;
   }
   .main {
     display: flex;
-    height: 47px;
+    height: 56px;
     padding-left: 14px;
     &.wide {
       max-width: 1200px;
@@ -40,9 +41,8 @@
 .logo {
   position: relative;
   width: 186px;
-  height: 47px;
+  height: 56px;
   overflow: hidden;
-  line-height: 45px;
   transition: all 0.3s;
   img {
     display: inline-block;
@@ -52,8 +52,8 @@
   h1 {
     display: inline-block;
     margin: 0 0 0 12px;
-    color: #fff;
-    font-weight: 400;
+    color: rgba(0, 0, 0, 0.65);
+    font-weight: 600;
     font-size: 16px;
     vertical-align: top;
   }
@@ -61,13 +61,12 @@
 
 .light {
   h1 {
-    color: #ffffff;
+    color: rgba(0, 0, 0, 0.65);
   }
 }
 
 .menu {
-  height: 47px;
-  line-height: 45px;
+  height: 55px;
+  line-height: 55px;
   border: none;
-  background-color: #204262;
 }
