--- a/webapp/src/components/TopNavHeader/index.less
+++ b/webapp/src/components/TopNavHeader/index.less
@@ -44,6 +44,7 @@
   height: 56px;
   overflow: hidden;
   transition: all 0.3s;
+  line-height: 55px;
   img {
     display: inline-block;
     height: 24px;
