--- a/webapp/src/pages/document.ejs
+++ b/webapp/src/pages/document.ejs
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <title>文件传输</title>
-    <link rel="icon" href="/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/icons/icon-128x128.png" type="image/x-icon" />
   </head>
   <body>
     <noscript>Sorry, we need js to run correctly!</noscript>
