--- a/webapp/src/global.less
+++ b/webapp/src/global.less
@@ -12,7 +12,7 @@ body,
 
 .ant-layout {
   min-height: 100vh;
-  background-color: #ffffff !important;
+  // background-color: #ffffff !important;
 }
 
 canvas {
