--- a/webapp/src/pages/FriendCenter/style.less
+++ b/webapp/src/pages/FriendCenter/style.less
@@ -8,4 +8,25 @@
     }
   }
 }
+.leftColumn{
+  overflow-y: auto;
+  background: '#fff';
+  border-right: '1px solid #e8e8e8';
+}
+.leftColumn::-webkit-scrollbar {
+  width: 6px;    
+  height: 1px;
+}
 
+.leftColumn::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  // -webkit-box-shadow: inset 0 0 5px blue;
+  background: #CCCCCC;
+
+}
+
+.leftColumn::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px #ffffff;
+  border-radius: 6px;
+  background: #EDEDED;
+}
